# Multi-Agent-Research-Assistant

./: README.md
backend/: .env.example  LLM.py  keys.py  pyproject.toml  research_pipeline.py  research_pipeline_stream.py
backend/agents/: build_agent.py  critic_agent.py  reader_agent.py  search_agent.py
backend/app/: main.py  schemas.py
backend/app/api/: research.py
backend/prompts/: critic_prompt.py  reader_prompt.py  search_prompt.py
backend/tools/: reader_tool.py  search_tool.py
frontend/: components.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatInput.tsx  DiaText.tsx  SuggestionChips.tsx
frontend/src/components/layout/: Header.tsx  Hero.tsx  ResultsView.tsx
frontend/src/components/research/: Citation.tsx  PhaseGroup.tsx  ReportView.tsx  ResearchTimeline.tsx
frontend/src/hooks/: useResearch.ts
frontend/src/lib/: citation.ts  research-stream.ts
frontend/src/types/: research.ts
